--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
-/* App.css */
+@import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Noto+Sans+Thai:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+* {
+  font-family: "Noto Sans Thai", sans-serif;
+}
 .app {
   display: flex;
   /* min-height: 110vh; */
@@ -11,7 +14,6 @@
 }
 
 .content-area {
-
   padding: 20px;
   min-height: 100vh;
   height: 100%;
