--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -1,27 +1,29 @@
 .second {
     transition: 0.6s;
     cursor: pointer;
+    background-color: green;
 }
 
 .text {
     font-weight: bolder;
     font-size: 18px;
+    color: white;
 }
 
 .detail {
     font-weight: bolder;
-    color: rgb(186, 186, 186);
-
+    /* color: rgb(186, 186, 186); */
+    color: greenyellow;
 }
 
 .second:hover {
-    background-color: green;
+    background-color: rgb(255, 255, 255);
 }
 
 .second:hover .text {
-    color: white;
+    color: black
 }
 
 .second:hover .detail {
-    color: greenyellow;
+    color: green;
 }
